fix: stretch height to 100%

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,12 +11,18 @@
     font-family: Inter;
 }
 
-.leaflet-container .leaflet-control-container .leaflet-attribution-flag {
-    display: none !important;
+html {
+    height: 100%;
 }
 
-.on-map {
-    z-index: 10000;
+body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.leaflet-container .leaflet-control-container .leaflet-attribution-flag {
+    display: none !important;
 }
 
 @layer base {
